@@ -178,6 +178,10 @@ public:
 					// Import/export from file selector.
 	static void export_frame(char *fname, gpointer user_data);
 	static void import_frame(char *fname, gpointer user_data);
+	static void export_all_frames(char *fname, gpointer user_data);
+	void export_all_pngs(char *fname, int shnum);
+	static void import_all_frames(char *fname, gpointer user_data);
+	void import_all_pngs(char *fname, int shnum);
 	void new_frame();		// Add/del.
 	void from_font_toggled(bool on);
 	void new_shape();
